# titanium-server

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  Restarter1.txt  Restarter2.txt  config.lua  gmon.out  load.bat  oldclean.pl  otserv.map  profile.txt  restart.bat  trans.bat  unban.txt
data/: COMMANDS.XML  SUMMONS.XML  backpack.pl  beds.xml  cash.pl  cash.txt  doors.xml  guilds.xml  heroes.txt  hostage.xml  houseitems.xml  houses.xml  oldclean.pl  pvparenas.xml  readables.xml  record.xml  stoneskin.pl
data/ACTIONS/: Action.txt  cdoor.lua
data/HOUSES/: A Kerker II.xml  A Kerker IV.xml  A Kerker V.xml  A Kerker XII.xml  A Kerker XIII.xml  A Kerker XIV.xml  A Kerker XV.xml  A Kerker XVI.xml  A Kerker XVII.xml  A Kerker XVIII.xml  Angel Apartment IV.xml  Angel Apartment V.xml  B Kerker II.xml  B Kerker III.xml  B Kerker VII.xml  B Kerker XIII.xml  B Kerker XIV.xml  B Kerker XV.xml  B Kerker XVI.xml  B Kerker XVIII.xml  Bamboo Camp II.xml  Bamboo Camp IV.xml  Black Tower III.xml  C Kerker II.xml  C Kerker III.xml  C Kerker V.xml  C Kerker VII.xml  C Kerker VIII.xml  C Kerker X.xml  C Kerker XI.xml  C Kerker XII.xml  C Kerker XIII.xml  C Kerker XIV.xml  C Kerker XV.xml  C Kerker XVIII.xml  City House I.xml  City House II.xml  City House IV.xml  City House V.xml  City House Villa I.xml  (+131 more)
data/ITEMS/: items2.otb
data/MONSTER/: ASSASIN.XML  ASSASSIN.XML  Alien Demon.xml  Arcc.XML  BAT.XML  BEHEMOTH.XML  Bisbal.xml  Bonebeast.xml  Broken Chaos Tower.XML  Butterfly King.xml  Centaur.xml  Cerberus.XML  Chaos Tower.XML  Chopper.xml  Chuck Norris.xml  Crimson.XML  DEMODRAS.XML  DEMON.XML  DOG.XML  Death ghost.XML  Demodrasss.xml  Diablos.xml  Dist Trainer.xml  EFREET.XML  Egipctothrower.xml  FUCOBRA.XML  Frost Hydra.xml  GHOST.XML  GHOUL.XML  Giant Beetle.xml  Giant Mummy.xml  Grinch.xml  HYDRA.XML  Halloween Hare Fake.xml  Hellhound.XML  Knight of the Damness.XML  Knight of the Forgetting.XML  Knight of the Hatered.XML  Krato.xml  LARVA.XML  (+85 more)
data/NPC/: ACESS.PL  AOLRAD.XML  Alwin.xml  Ancient.xml  Capitan Forest.xml  Captain huck.xml  DISSKY.XML  DRUSKY.XML  Dagor.xml  Darkness Angel.xml  Distance Dude.xml  Dufi.xml  Ebay.xml  Elwin.xml  Event.xml  FLUIDRAD.XML  Fargum.xml  Foodrad.xml  Gardian2.xml  Gemeo.xml  Guardian 1.xml  Harry Potter.xml  Humphrey.xml  Kanobi.xml  Knisky.xml  Lector.xml  Little Hest.xml  Mad.xml  Maximus.xml  Mino.xml  Mythos Archbishop.xml  Nimral.xml  Old Heiller.xml  Orlan.xml  POST.XML  Priest of Valhala.xml  Ringuero.xml  Ruby.xml  Rufi.xml  S Guild Master.xml  (+15 more)
data/SPELLS/: SPELLS.XML
data/Store/: cash.txt  cash291006.txt  cashe.txt  cashlkast.txt  casht.txt  cheated chars.txt
data/actions/: actions.xml
data/houses/: a kerker i.xml  a kerker iii.xml  a kerker ix.xml  a kerker vi.xml  a kerker vii.xml  a kerker viii.xml  a kerker x.xml  a kerker xi.xml  angel apartment i.xml  angel apartment ii.xml  angel apartment iii.xml  b kerker i.xml  b kerker iv.xml  b kerker ix.xml  b kerker v.xml  b kerker vi.xml  b kerker viii.xml  b kerker x.xml  b kerker xi.xml  b kerker xii.xml  b kerker xvii.xml  bamboo camp i.xml  bamboo camp iii.xml  bamboo camp v.xml  bamboo camp vi.xml  black tower i.xml  black tower ii.xml  c kerker i.xml  c kerker iv.xml  c kerker ix.xml  c kerker vi.xml  c kerker xvi.xml  c kerker xvii.xml  castle of the snakes.xml  city house iii.xml  city house schlucker.xml  city house vi.xml  city house villa v.xml  d kerker ii.xml  d kerker ix.xml  (+108 more)
data/items/: items.otb
data/monster/: alien demon.xml  ancient scarab.xml  ashmunrah.xml  badger.xml  banshee queen.xml  banshee.xml  beholder.xml  biatch.xml  bisbal.xml  black knight.xml  blue djinn.xml  bone beast.xml  bonebeast.xml  butterfly king.xml  butterfly.xml  carniphila.xml  cave rat.xml  centaur.xml  centipede.xml  chopper.xml  cobra.xml  crypt shambler.xml  cyclops.xml  damn xp.xml  danny the dog.xml  dark archon illusion.xml  dark monk.xml  death bringer.xml  death doll.xml  deathslicer.xml  demodrasss.xml  demon noob.xml  demon skeleton.xml  diablos.xml  dragon lord.xml  dragon.xml  dwarf geomancer.xml  dwarf guard.xml  dwarf.xml  (+93 more)
src/: CMakeLists.txt  Makefile.win  account.cpp  account.h  actions.cpp  actions.h  allocator.cpp  allocator.h  chat.cpp  chat.h  commands.cpp  commands.h  const76.h  container.cpp  container.h  creature.cpp  creature.h  definitions.h  exception.cpp  exception.h  fileloader.cpp  fileloader.h  game.cpp  game.h  guilds.cpp  guilds.h  houses.cpp  houses.h  ioaccount.cpp  ioaccount.h  ioaccountxml.cpp  ioaccountxml.h  iomap.h  iomapbin.cpp  iomapbin.h  iomapotbm.cpp  iomapotbm.h  iomapxml.cpp  iomapxml.h  ioplayer.cpp  (+66 more)
travis/: install_cmake.sh  push_docker_image.sh
(+386 files in other folders)
